fixed the alignment issue, no more alingment bugs

--- a/src/scss/smallAlignments.scss
+++ b/src/scss/smallAlignments.scss
@@ -81,10 +81,10 @@
     width: 40%;
   }
   .DOMChangedRightSide_P-1301 {
-    width: 60%;
+    width: 0% !important;
   }
   .DOMChangedHiddenSide {
-    width: 60%;
+    width: 60% !important;
   }
 }
 
@@ -94,10 +94,10 @@
     width: 35%;
   }
   .DOMChangedRightSide_P-1301 {
-    width: 65%;
+    width: 0% !important;
   }
   .DOMChangedHiddenSide {
-    width: 65%;
+    width: 65% !important;
   }
 }
 
